--- a/app/restaurant.html
+++ b/app/restaurant.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <!-- Main CSS file -->
   <link rel="stylesheet" href="styles/css/main.css" type="text/css">
-  <title>Restaurant Info</title>
+  <title>Restaurant Review </title>
 </head>
 
 <body class="container inside debug">
@@ -35,26 +35,26 @@
   <!-- Beginning main -->
   <main id="maincontent">
     <!-- Beginning map -->
-    <section id="map-container">
+    <section id="map-container" tabindex="-1">
       <div id="map"></div>
     </section>
     <!-- End map -->
     <!-- Beginning restaurant -->
-    <section id="restaurant-container">
+    <section id="restaurant-container" aria-label="restaurant overview">
       <div class="restaurant-visual">
         <h1 id="restaurant-name"></h1>
-        <img id="restaurant-img">
+        <img id="restaurant-img" aria-labelledby="restaurant-name">
         <p id="restaurant-cuisine"></p>
       </div>
-      <div class="restaurant-details">
+      <details class="restaurant-details" open>
         <p id="restaurant-address"></p>
         <table id="restaurant-hours"></table>
-      </div>
+      </details>
 
     </section>
     <!-- end restaurant -->
     <!-- Beginning reviews -->
-    <section id="reviews-container">
+    <section id="reviews-container" aria-label="posted reviews">
       <ul id="reviews-list"></ul>
     </section>
     <!-- End reviews -->
