--- a/app/restaurant.html
+++ b/app/restaurant.html
@@ -22,7 +22,7 @@
       </h1>
     </nav>
     <!-- Beginning breadcrumb -->
-    <ul id="breadcrumb">
+    <ul id="breadcrumb" role="application">
       <li>
         <a href="/">Home</a>
       </li>
@@ -36,7 +36,7 @@
   <main id="maincontent">
     <!-- Beginning map -->
     <section id="map-container" tabindex="-1">
-      <div id="map"></div>
+      <div id="map" role="application" aria-label="Map with restaurants"></div>
     </section>
     <!-- End map -->
     <!-- Beginning restaurant -->
