--- a/app/restaurant.html
+++ b/app/restaurant.html
@@ -22,11 +22,13 @@
       </h1>
     </nav>
     <!-- Beginning breadcrumb -->
-    <ul id="breadcrumb" role="application">
-      <li>
-        <a href="/">Home</a>
-      </li>
-    </ul>
+    <nav aria-label="Breadcrumb" class="breadcrumb">
+      <ol id="breadcrumb-link">
+        <li>
+          <a href="/" aria-current="page">Home</a>
+        </li>
+      </ol>
+    </nav>
     <!-- End breadcrumb -->
     <!-- End nav -->
   </header>
@@ -42,7 +44,7 @@
     <!-- Beginning restaurant -->
     <section id="restaurant-container" aria-label="restaurant overview">
       <div class="restaurant-visual">
-        <h1 id="restaurant-name"></h1>
+        <h2 id="restaurant-name"></h2>
         <img id="restaurant-img" aria-labelledby="restaurant-name">
         <p id="restaurant-cuisine"></p>
       </div>
